--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 
 <body>
+    <div class="vhs-border"></div>
     <div class="container" id="screen">
         <div class="content">
             <button class="click-button" id="clickable">📺</button>
             <div class="counter" id="counter">0</div>
         </div>
         <div class="fuzzy-overlay"></div>
+    </div>
+
+    <div id="stats">
+        <div id="cps">CPS: <span id="cps-value">0</span></div>
+        <div id="datetime"><span id="datetime-value"></span></div>
     </div>
 
     <!-- Link to your external JavaScript file -->
